--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -255,13 +255,33 @@
         </LinearLayout>
 
         <!-- Submit Answers Button -->
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:text="Submit"
-            android:layout_gravity="center"
-            android:onClick="checkAnswers"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginBottom="16dp"
+                android:text="Submit"
+                android:layout_gravity="center"
+                android:onClick="checkAnswers"/>
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginBottom="16dp"
+                android:text="Reset"
+                android:layout_gravity="center"
+                android:onClick="resetAnswers"/>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 </ScrollView>
