shuffling of questions and answers for a (somewhat) unique playthrough each time =)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -136,7 +136,7 @@
 
                 <RadioButton
                     style="@style/Answers"
-                    android:id="@+id/answe3a"
+                    android:id="@+id/answer3a"
                     android:text="The Vikings" />
 
                 <RadioButton
